<resources>
    <string name="app_name">GameShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_list_img_desc">游戏封面图片</string>
    <string name="search_hint_text">搜一搜</string>
    <string name="search_bt_text">搜索</string>
    <string name="game_service_text">客服</string>
    <string name="game_add_bag_text">加入回收袋</string>
    <string name="game_transaction_text">交易</string>
    <string name="game_star_text">收藏</string>
    <string name="game_declare_title">游戏说明:</string>
    <string name="game_declare">购买时版本随机发，不支持7天无理由退款</string>
    <string name="recycle_process_title">回收流程:</string>
    <string name="price_chart_title">价格走势:</string>

    <string name="account">vaj0ebi2utv8b</string>
    <string name="token">bae6iug9bai4e</string>
    <string name="shared_preferences_file_name">cxy5rxr3yjp8oji9pdx</string>
    <string name="login_page_title">登录</string>
    <string name="account_et_hint">账号</string>
    <string name="password_et_hint">密码</string>
    <string name="login_bt_text">登 录</string>
    <string name="register_tip_text">注册账号</string>
    <string name="forget_password_text">忘记密码?</string>
    <string name="register_bt_text">注 册</string>
    <string name="register_page_title">注册</string>
    <string name="recycle_switch_text">回收</string>
    <string name="buy_switch_text">购买</string>
    <string name="switch_desc">添加类型:</string>
    <string name="num_text">数量</string>
    <string name="num_default_value">1</string>
    <string name="confirm_bt_text">确 定</string>
    <string name="switch_tips_default_text">添加到：回收</string>
    <string name="user_topic">我的</string>
    <string name="user_order_title">我的订单</string>
    <string name="user_info_change_tips">修改个人资料</string>
    <string name="user_more_title">更多服务</string>
    <string name="user_arp">公告</string>
    <string name="test_text">测试</string>
    <string name="logout_bt_text">退出登录</string>
    <string name="config_title">设置</string>
    <string name="no_more">暂无更多,登陆后可以退出登录</string>
    <string name="wait_send_text">待发货</string>
    <string name="wait_receive_text">待收货</string>
    <string name="advice_bt_text">投诉建议</string>
    <string name="kd_bt_text">寄快递</string>
    <string name="cn_bt_text">菜鸟裹裹</string>
    <string name="all_order_bt_text"><![CDATA[全部订单 >]]></string>
    <string name="expectAwardText">预计可获得:</string>
    <string name="price">元</string>
    <string name="deduction_price">15元</string>
    <string name="deduction_text">平台验货费用：</string>
    <string name="recycle_pack_title">回收袋</string>
    <string name="recycle_manage_bt_text">管理</string>
    <string name="all_selected_text">全选</string>
    <string name="settlement_bt_text">下单购买</string>
    <string name="count_text">合计:</string>
    <string name="price_icon">￥</string>
    <string name="pack_delete_bt_text">删 除</string>
    <string name="pack_add_favorite_bt_text">添加到收藏</string>
    <string name="order_submit_settlement_bt_text">确认购买</string>
    <string name="order_games_title">商品信息:</string>
    <string name="recycle_tip_text">其中已经扣除每张15元的中介费用</string>
    <string name="phone_number_et_hint">手机号</string>
    <string name="location_et_hint">省、市、区及小区楼号等</string>
    <string name="name_et_hint">名字</string>
</resources>