<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#409EFF">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/back_bt"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/back_white"
                    android:layout_marginStart="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="ContentDescription" />

            <TextView
                    android:text="@string/login_page_title"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/controller1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="20dp"
                tools:ignore="ContentDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/account_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:maxLines="1"
                android:maxLength="20"
                android:textCursorDrawable="@drawable/cursor1"
                android:hint="@string/account_et_hint"
                android:inputType="text"
                tools:ignore="Autofill" />

        <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/account_et"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="10dp"
                android:maxLines="1"
                android:maxLength="20"
                android:textCursorDrawable="@drawable/cursor1"
                android:hint="@string/password_et_hint"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

        <ImageView
                android:id="@+id/password_visible_switch"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@mipmap/eye_close"
                app:layout_constraintTop_toTopOf="@id/password_et"
                app:layout_constraintBottom_toBottomOf="@id/password_et"
                app:layout_constraintEnd_toEndOf="@id/password_et"
                android:layout_marginEnd="5dp"
                tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_bt"
                app:layout_constraintTop_toBottomOf="@id/password_et"
                android:layout_marginTop="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_width="match_parent"
                android:background="@drawable/shape_corner4"
                android:layout_height="45dp">

            <TextView
                    android:text="@string/login_bt_text"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/register_intent_bt"
                android:text="@string/register_tip_text"
                android:textColor="#409EFF"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/login_bt"
                app:layout_constraintEnd_toEndOf="@+id/login_bt"
                android:layout_marginTop="15dp"/>

        <TextView
                android:id="@+id/forget_password_bt"
                android:text="@string/forget_password_text"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/login_bt"
                app:layout_constraintStart_toStartOf="@+id/login_bt"
                android:layout_marginTop="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>